Proj_Metadata/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Acceptances__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is the current number of offers/units that have been accepted by customers.</description>
        <inlineHelpText>This is the current number of offers/units that have been accepted by customers.</inlineHelpText>
        <label>Acceptances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Units_Available__c</fullName>
        <description>This is the number of units of the offer that are currently available.</description>
        <inlineHelpText>This is the number of units of the offer that are currently available.</inlineHelpText>
        <label>Current Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is a description of the offer (ie. Organic Strawberries)</description>
        <inlineHelpText>This is a description of the offer (ie. Organic Strawberries)</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Units_Available__c</fullName>
        <description>This is the maximum units available for this offer. This is entered when the offer is setup initially to represent the units in inventory.</description>
        <inlineHelpText>This is the maximum units available for this offer. This is entered when the offer is setup initially to represent the units in inventory.</inlineHelpText>
        <label>Original Units Available</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Through__c</fullName>
        <description>The date when this offer is valid through.</description>
        <inlineHelpText>The date when this offer is valid through.</inlineHelpText>
        <label>Valid Through</label>
        <type>Date</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Original_Units_Available__c</columns>
        <columns>Acceptances__c</columns>
        <columns>Current_Units_Available__c</columns>
        <columns>Valid_Through__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Offer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>